fix: ChartGrid flicker and zoom reset when new data (#6028)

--- a/webui/react/src/components/kit/LineChart.module.scss
+++ b/webui/react/src/components/kit/LineChart.module.scss
@@ -1,8 +1,8 @@
 .chartgridContainer {
   background-color: var(--theme-background);
+  margin: 5px;
   min-height: 530px;
   overflow-y: hidden;
-  padding: 5px;
 }
 .chartgridCell {
   background-color: var(--theme-background);
